@@ -99,7 +99,7 @@ foreach my $var ( qw(
    site_desc default_city default_country contact_email default_language
    formatting_rules_node backlinks_in_title gmaps_api_key centre_long
    centre_lat show_gmap_in_node_display default_gmaps_zoom
-   default_gmaps_search_zoom force_wgs84
+   default_gmaps_search_zoom force_wgs84 google_analytics_key
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
   ) ) {
