@@ -44,5 +44,16 @@
 </div>
 </div>
 </div>
+
+  [% IF config.google_analytics_key %]
+    <script src="http://www.google-analytics.com/urchin.js"
+     type="text/javascript">
+    </script>
+    <script type="text/javascript">
+      _uacct = "[% CGI.escapeHTML( config.google_analytics_key  ) %]";
+      if ( typeof urchinTracker == 'function' ) urchinTracker();
+    </script>
+  [% END %]
+
 </body>
 </html>
