@@ -21,6 +21,7 @@ http://dev.openguides.org/log/trunk
         Add config option to place content above navbar in HTML.
         Add config option to suppress inline maps on geotagged nodes.
         Fix preferences to take notice of users turning off inline Google maps.
+        Add option to include Google Analytics.
         Fix "Link to this page" on index maps to remember the map type and
           the thing it's indexing (#190).
         Write tests for and fix:
